# wrl3

my_first/: .env  README.md  pyproject.toml  report.md
my_first/output/: report.md
my_first/src/: report.md
my_first/src/my_first/: crew.py  main.py
my_first/src/my_first/config/: agents.yaml  tasks.yaml
web/: app.py
web/.gradio/flagged/: dataset1.csv
