[project]
name = "my_first"
version = "0.1.0"
description = "my_first using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.201.1,<1.0.0"
]

[project.scripts]
my_first = "my_first.main:run"
run_crew = "my_first.main:run"
train = "my_first.main:train"
replay = "my_first.main:replay"
test = "my_first.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
